updating inventory and reservation specification
